--- a/src/main/resources/org/example/authorization.fxml
+++ b/src/main/resources/org/example/authorization.fxml
@@ -44,6 +44,11 @@
                   <Font size="15.0" />
                </font>
             </Button>
+            <Label fx:id="labelError" alignment="CENTER" layoutX="24.0" layoutY="221.0" opacity="0.0" prefHeight="46.0" prefWidth="179.0" text="invalid username or password*" textFill="RED">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
